Fix Account modal styling, z-index issue, & formats PageLeadBar values to locale

--- a/src/views/Investing/index.less
+++ b/src/views/Investing/index.less
@@ -76,20 +76,11 @@
 						margin-right: 16px;
 					}
 				}
-
-				.available {
-				}
 			}
 
 			&.to-wallet {
 				.ant-select {
 					margin-bottom: 20px;
-				}
-
-				.title {
-				}
-
-				.available {
 				}
 			}
 		}
